<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:id="@+id/cbConsecutivo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BackGroundColor"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextColor="@android:color/background_light" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/pbadicionarJogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:text="@string/selecione_o_jogo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerJogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:entries="@array/tipoJogo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/n_mero_de_dezenas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerDezenas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
             />

        <TextView
            android:id="@+id/txtTimesdoCoracao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="Time do Coração"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:entries="@array/timesdocoracao"
            android:visibility="gone">

        </Spinner>

        <TextView
            android:id="@+id/txtMeses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="Mês de Sorte"
            android:textStyle="bold"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/spinnerMeses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:entries="@array/meses"
            android:visibility="gone">
        </Spinner>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/n_meros"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNumerosGerados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"

            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >

            <Button
                android:id="@+id/buttonGerar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:text="@string/gerar"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnMaisSorteados"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:tag=""
                android:text="@string/mais_sorteados"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonEscolher"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:text="@string/escolher"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonCapturarNumeros"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:text="@string/gerar"
                android:textColor="@color/secondaryDarkColor"
                android:textSize="16sp"
                android:visibility="gone"/>


        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/concurso"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSorteio"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnProximoConcurso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Próximo Concurso"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="16sp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"/>

        <TextView
            android:id="@+id/textView111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.14"
            android:text="@string/escolhendo_os_n_meros_mais_sorteados_ser_gerada_as_dezenas_mais_sorteadas_nos_dez_ltimos_concursos" />

    </LinearLayout>
</layout>